--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 streamlit==1.54.0
-torch==2.0.1
-torchvision==0.15.2
+torch
+torchvision
 numpy
 pillow
-pytorch-grad-cam
 opencv-python-headless
+pytorch-grad-cam
